------------------------------------------------------------------------
r2209 | rdahnke | 2023-05-26 15:00:52

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_vol_inpaint.m

Changed:   Update MP2Rage function cat_vol_mp2rage and batch in cat_conf_tools.
           Added help, bias correction, integrated SPM preprocessing, report, 
           batch file dependencies. 
Changed:   Added verbose setting (default=0 i.e. no progress bar) to  
           cat_vol_inpaint function.  ------------------------------------------------------------------------
r2208 | gaser | 2023-05-19 11:43:40

Changed paths:
 M CHANGES.txt
 M cat_vol_img2mip.m

Fixed: Added check to cat_vol_img2mip.m for empry results/images.
------------------------------------------------------------------------
r2207 | rdahnke | 2023-05-15 12:22:43

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m

New:     Added experimental function and batch to optimise MP2Rage data for CAT
         preprocessing.------------------------------------------------------------------------
r2206 | gaser | 2023-05-11 12:08:58

Changed paths:
 M CHANGES.txt
 M cat_vol_eidist.m
AM cat_vol_inpaint.m
 M doc/index.html

Changed: Updated help text.
Added:   New function cat_vol_inpaint for inpainting of missing values.
------------------------------------------------------------------------
r2205 | rdahnke | 2023-05-08 09:34:57

Changed paths:
 M CHANGES.txt
 M cat_io_csv.m
 M cat_io_report.m
 M cat_main_reportfig.m

Fixed:   Corrected bug in cat_io_csv to read real NaNs.
Fixed:   Corrected bug in cat_io_report.   
Changed: Setup blood vessel output in cat_main_reportfig.
------------------------------------------------------------------------
r2201 | rdahnke | 2023-05-06 11:00:21

Changed paths:
 M CHANGES.txt

New:      Added min-max-based gray-scaled operations in cat_vol_morph.  
New:      Added new blood-vessel-detection in cat_vol_partvol1639 that 